--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-opencv-python>=4.5.0,<4.7.0
-mediapipe>=0.8.9,<0.9.0
-numpy>=1.19.0,<1.22.0
+opencv-python>=4.8.0
+mediapipe>=0.10.0
+numpy>=1.24.0
+pytest>=7.4.0
+python-dotenv>=1.0.0
