--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -10,7 +10,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "electron:start": "electron .",
-    "electron:build": "electron-builder"
+    "electron:build": "electron-builder",
+    "dev": "node start-dev.js"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,6 @@
     "@angular/platform-browser": "^19.2.11",
     "@angular/platform-browser-dynamic": "^19.2.11",
     "@angular/router": "^19.2.11",
-    "electron": "^28.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -33,7 +33,6 @@
     "@angular/compiler-cli": "^19.2.11",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
-    "electron-builder": "^24.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
