--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -9,7 +9,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron:start": "electron .",
+    "electron:start": "npx electron .",
     "electron:build": "electron-builder",
     "dev": "node start-dev.js"
   },
@@ -33,6 +33,8 @@
     "@angular/compiler-cli": "^19.2.11",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.0.0",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.9.1",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
