--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@
 mediapipe==0.10.21
 opencv-python==4.9.0.80
 numpy==1.26.4
+typing-extensions==4.9.0
 
 # Dependências de desenvolvimento
 pytest==8.0.2
 black==24.2.0
-flake8==7.0.0 
+flake8==7.0.0
+pytest-cov==4.1.0 
