--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ mediapipe==0.10.21
 opencv-python==4.9.0.80
 numpy==1.26.4
 typing-extensions==4.9.0
+tqdm==4.66.2
 
 # Dependências de desenvolvimento
 pytest==8.0.2
