--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ opencv-python==4.9.0.80
 numpy==1.26.4
 typing-extensions==4.9.0
 tqdm==4.66.2
+dataclasses-json==0.6.3
 
 # Dependências de desenvolvimento
 pytest==8.0.2
