--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy==1.26.4
 typing-extensions==4.9.0
 tqdm==4.66.2
 dataclasses-json==0.6.3
+scipy==1.12.0
 
 # Dependências de desenvolvimento
 pytest==8.0.2
