--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ typing-extensions==4.9.0
 tqdm==4.66.2
 dataclasses-json==0.6.3
 scipy==1.12.0
+pydantic==2.6.3
+python-dotenv==1.0.1
 
 # Dependências de desenvolvimento
 pytest==8.0.2
