--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dataclasses-json==0.6.3
 scipy==1.12.0
 pydantic==2.6.3
 python-dotenv==1.0.1
+protobuf==4.25.3
 
 # Dependências de desenvolvimento
 pytest==8.0.2
