--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ scipy==1.12.0
 pydantic==2.6.3
 python-dotenv==1.0.1
 protobuf==4.25.3
+rich==13.7.1
 
 # Dependências de desenvolvimento
 pytest==8.0.2
