--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pydantic==2.6.3
 python-dotenv==1.0.1
 protobuf==4.25.3
 rich==13.7.1
+jsonschema==4.21.1
 
 # Dependências de desenvolvimento
 pytest==8.0.2
