--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ python-dotenv==1.0.1
 protobuf==4.25.3
 rich==13.7.1
 jsonschema==4.21.1
+streamlit==1.32.2
+pillow==10.2.0
+moviepy==1.0.3
 
 # Dependências de desenvolvimento
 pytest==8.0.2
